Completed Wednesday's work

--- a/products.html
+++ b/products.html
@@ -1,35 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <!-- Meta Data -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Title -->
-    <title>Spooky Halloween Store</title>
+        <!-- Title -->
+       <title>Spooky Halloween Store</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    
-    <!-- JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts/script.js" defer></script>
-</head>
-<body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/styles.css">
 
-    </nav>
+        <!-- JavaScript -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="scripts/script.js" defer></script>
+    </head>
+    <body>
+        <!-- Navigation Bar -->
+        <nav class="navbar">
+        <div class="nav-container">
+        <div class="logo">
+            <img src="images/logo-skull.png" alt="Skull Logo" class="logo-img">
+        <h1>Spooky Store</h1>
+        </div>
+            <ul class="nav-menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+        </nav>
 
-    <!-- Footer Section-->
-<footer class="footer">
-    <div class="footer-content">
-        <img src="images/footer-tree1.png" alt="First Footer Tree" class="footer-tree">
-        <p>&copy; 2025 Spooky Halloween Store. All rights reserved.</p>
-        <p>Happy Halloween! &#127875;</p>
-        <img src="images/footer-tree2.png" alt="Second Footer Tree" class="footer-tree">
-    </div>
-</footer>
+<!-- Floating Halloween Icons-->
+        <div class="floating-icons">
+        <img src="images/nav-bat.png" alt="Floating Bat Icon" class="float-icon bat">
+        <img src="images/stars.png" alt="Floating Star Icon" class="float-icon stars">
 
-</body>
+</div>
+
+<!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h2 class="spooky-title">Welcome to the Spookiest Store</h2>
+            <p class="hero-text">Get ready for a frightfully fun Halloween with our amazing collection of spooky items!</p>
+            <button class="cta-button" id="heroButton">Explore Now</button>
+        </div>
+        <div class="hero-images">
+            <img src="images/home-pumpkin.png" alt="Pumpkin" class="hero-img">
+            <img src="images/home-tree1.png" alt="Spooky tree" class="hero-tree">
+        </div>
+    </section>
+
+<!-- Main Content -->
+    <main>
+    <!-- Featured Items -->
+    <section class="featured">
+        <h2 class="section-title">Featured Halloween Items</h2>
+        <div class="featured-grid">
+            <div class="featured-card">
+                <img src="images/item-witch-hat.png" alt="Witch Hat">
+                <h3>Witch Hat</h3>
+                <p>Perfect for your Halloween costume!</p>
+            </div>
+            <div class="featured-card">
+                <img src="images/item-pumpkin.png" alt="Pumpkin">
+                <h3>Jack-O-Lantern</h3>
+                <p>Light up your spooky night!</p>
+            </div>
+            <div class="featured-card">
+                <img src="images/item-spider.png" alt="Spider">
+                <h3>Creepy Spider</h3>
+                <p>Add some creepiness to your decor!</p>
+            </div>
+            <div class="featured-card">
+                <img src="images/item-broom.png" alt="Broom">
+                <h3>Witch's Broom</h3>
+                <p>Fly away on a Halloween night!</p>
+            </div>
+        </div>
+    </section>
+        </main>
+<!-- Footer Section-->
+    <footer class="footer">
+        <div class="footer-content">
+            <img src="images/footer-tree1.png" alt="First Footer Tree" class="footer-tree">
+            <p>&copy; 2025 Spooky Halloween Store. All rights reserved.</p>
+            <p>Happy Halloween! &#127875;</p>
+            <img src="images/footer-tree2.png" alt="Second Footer Tree" class="footer-tree">
+        </div>
+    </footer>
+    </body>
 </html>
