--- a/about.html
+++ b/about.html
@@ -1,35 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Title -->
-    <title>Spooky Halloween Store</title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    
-    <!-- JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts/script.js" defer></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Spooky Halloween Store</title>
+   <link rel="stylesheet" href="css/styles.css">
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script src="scripts/script.js" defer></script>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
+   <!-- Navigation Bar -->
+   <nav class="navbar">
+       <div class="nav-container">
+           <div class="logo">
+               <img src="images/logo-skull.png" alt="Skull Logo" class="logo-img">
+               <h1>Spooky Store</h1>
+           </div>
+           <ul class="nav-menu">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="products.html">Products</a></li>
+               <li><a href="about.html" class="active">About</a></li>
+               <li><a href="contact.html">Contact</a></li>
+           </ul>
+       </div>
+   </nav>
 
-    </nav>
+   <!-- Floating Halloween Icons-->
+   <div class="floating-icons">
+       <img src="images/nav-bat.png" alt="Floating Bat Icon" class="float-icon bat">
+       <img src="images/stars.png" alt="Floating Star Icon" class="float-icon stars">
+   </div>
 
-    <!-- Footer Section-->
-<footer class="footer">
-    <div class="footer-content">
-        <img src="images/footer-tree1.png" alt="First Footer Tree" class="footer-tree">
-        <p>&copy; 2025 Spooky Halloween Store. All rights reserved.</p>
-        <p>Happy Halloween! &#127875;</p>
-        <img src="images/footer-tree2.png" alt="Second Footer Tree" class="footer-tree">
-    </div>
-</footer>
+   <!-- Page Header -->
+   <section class="page-header">
+       <h2>About Our Spooky Store</h2>
+       <p>Bringing Halloween magic to life since 2020</p>
+   </section>
 
+<!-- About Content -->
+   <section class="about-content">
+       <div class="about-container">
+           <div class="about-text">
+               <h3>Our Haunted History</h3>
+               <p>Welcome to the Spooky Halloween Store! We started our journey in 2020 with a simple mission: to bring the magic and excitement of Halloween to everyone. What began as a small pop-up shop has grown into a year-round destination for all things spooky and spectacular.</p>
+
+               <h3>What We Offer</h3>
+               <p>Our store features an incredible selection of Halloween items including costumes, decorations, props, and accessories. Whether you're planning an epic Halloween party, decorating your home, or looking for the perfect costume, we have everything you need to make your Halloween unforgettable.</p>
+
+               <h3>Our Mission</h3>
+               <p>We believe Halloween is more than just a holiday - it's a celebration of creativity, imagination, and fun! Our mission is to provide high-quality products that help you create magical memories with friends and family. Every item in our store is carefully selected to ensure maximum spookiness and enjoyment!</p>
+           </div>
+           <div class="about-image">
+               <img src="images/about-scare.png" alt="Scarecrow" class="scare-img">
+           </div>
+       </div>
+   </section>
+
+   <!-- Fun Facts Section -->
+   <section class="fun-facts">
+       <h3 class="section-title">Spooky Fun Facts</h3>
+       <div class="facts-grid">
+           <div class="fact-card">
+               <h4>&#127875; 1000+</h4>
+               <p>Products Available</p>
+           </div>
+           <div class="fact-card">
+               <h4>&#128123; 50,000+</h4>
+               <p>Happy Customers</p>
+           </div>
+           <div class="fact-card">
+               <h4>&#128025; 365</h4>
+               <p>Days of Halloween</p>
+           </div>
+           <div class="fact-card">
+               <h4>&#128375; 5</h4>
+               <p>Years in Business</p>
+           </div>
+       </div>
+   </section>
+
+               <h3>What We Offer</h3>
+               <p>Our store features an incredible selection of Halloween items including costumes, decorations, props, and accessories. Whether you're planning an epic Halloween party, decorating your home, or looking for the perfect costume, we have everything you need to make your Halloween unforgettable.</p>
+
+               <h3>Our Mission</h3>
+               <p>We believe Halloween is more than just a holiday - it's a celebration of creativity, imagination, and fun! Our mission is to provide high-quality products that help you create magical memories with friends and family. Every item in our store is carefully selected to ensure maximum spookiness and enjoyment!</p>
+           </div>
+           <div class="about-image">
+               <img src="images/about-scare.png" alt="Scarecrow" class="scare-img">
+           </div>
+       </div>
+   </section>
+
+   <!-- Fun Facts Section -->
+   <section class="fun-facts">
+       <h3 class="section-title">Spooky Fun Facts</h3>
+       <div class="facts-grid">
+           <div class="fact-card">
+               <h4>&#127875; 1000+</h4>
+               <p>Products Available</p>
+           </div>
+           <div class="fact-card">
+               <h4>&#128123; 50,000+</h4>
+               <p>Happy Customers</p>
+           </div>
+           <div class="fact-card">
+               <h4>&#128025; 365</h4>
+               <p>Days of Halloween</p>
+           </div>
+           <div class="fact-card">
+               <h4>&#128375; 5</h4>
+               <p>Years in Business</p>
+           </div>
+       </div>
+   </section>
+
+   <!-- Footer Section -->
+   <footer class="footer">
+       <div class="footer-content">
+           <img src="images/footer-tree1.png" alt="First Footer Tree" class="footer-tree">
+           <p>&copy; 2025 Spooky Halloween Store. All rights reserved.</p>
+           <p>Happy Halloween! &#127875;</p>
+           <img src="images/footer-tree2.png" alt="Second Footer Tree" class="footer-tree">
+       </div>
+   </footer>
 </body>
 </html>
